--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
+<head>
+	<title>TestGit</title>
+</head>
 <body>
-	<p>coucou</p>
+	<h1>Coucou, ceci est un test git</h1>
 </body>
 </html>
