ajout d'un paragraphe

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>TestGit</title>
 </head>
 <body>
-	<h1>Coucou, ceci est un test git</h1>
+	<h1>1er test Git</h1>
+	<p>Coucou, ceci est un test git</p>
 </body>
 </html>
